--- a/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/ident-visit/ident-visit.html
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/ident-visit/ident-visit.html
@@ -22,7 +22,7 @@
 
 
 
-                <ait-field class="col s12 l6" form="form" caption="Дата рождения" ng-model="$ctrl.Birthday" ait-field-type="birthdate" required="true">
+                <ait-field class="col s12 l6" form="form" caption="Дата рождения" ng-model="$ctrl.Birthdate" ait-field-type="birthdate" required="true">
                 </ait-field>
 
                 <ait-field class="col s12 l5 offset-l1 sex" form="form" caption="Пол" ng-model="$ctrl.Sex" items-source="$ctrl.state.sexs" ait-field-type="sex" required="true">
