--- a/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/doctor/doctor.html
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/doctor/doctor.html
@@ -6,10 +6,10 @@
 
     <br />
 
-    <div class="card row" ng-if="$ctrl.state.doctor">
+    <div class="card row">
 
         <div class="col s12">
-            <div class="top row">
+            <div class="top row" ng-if="$ctrl.state.doctor">
 
 
                 <div class="col m2 s3">
