--- a/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/doctor/doctor.html
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/doctor/doctor.html
@@ -51,7 +51,7 @@
             </div>
 
             <div class="row">
-                <div class="col m12 visit-guide">
+                <div class="col s12 visit-guide">
                     <br />
 
                     <ul class="tabs">
@@ -104,8 +104,7 @@
                             </div>
                         </div>
 
-                        <div class="col s12" ng-switch-when="result-visit">
-                            <h3 class="header">Результат</h3>
+                        <div class="col s12" ng-switch-when="result-visit">                            
                             <result-visit></result-visit>
                         </div>
                     </div>
