--- a/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/result-visit/result-visit.html
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/result-visit/result-visit.html
@@ -1,6 +1,12 @@
 ﻿<div class="row">
-    <div class="col m6 s12 main">
-        УРА!
+    <div class="col s12 main">
+        <div class="progress">
+            <div class="indeterminate"></div>
+        </div>
+
+        <div id="content-report">
+
+        </div>
     </div>
 </div>
 
