--- a/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/ident-visit/ident-visit.html
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/ident-visit/ident-visit.html
@@ -85,7 +85,7 @@
             <p style="margin-top: 34px;">
                 <div class="row">
                     <div class="col s12 l6">
-                        <ait-loading ng-if="$ctrl.state.isLoading">идет обработка...</ait-loading>
+                        <ait-loading ng-if="$ctrl.state.isLoading">ждите, идет обработка...</ait-loading>
                         <ait-error-panel error="$ctrl.state.error">Ошибка:</ait-error-panel>
                         &nbsp;
                     </div>
@@ -100,9 +100,6 @@
                     </div>
                 </div>
             </p>
-
         </form>
     </div>
-
-
 </div>
