--- a/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/doctor/doctor.html
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/doctor/doctor.html
@@ -1,6 +1,4 @@
-﻿
-
-<div class="container">
+﻿<div class="container">
     <!--<h2 class="header">Тут доктор</h2>-->
     <!--<h2>Стоматологи</h2>-->
 
@@ -10,8 +8,6 @@
 
         <div class="col s12">
             <div class="top row" ng-if="$ctrl.state.doctor">
-
-
                 <div class="col m2 s3">
 
                     <div class="avatar">
@@ -30,8 +26,6 @@
                     </div>
                 </div>
 
-
-
                 <div class="col m10 s12">
                     <div style="margin-top:30px;" ng-if="$ctrl.state.isLoading"><ait-loading></ait-loading></div>
 
@@ -46,72 +40,66 @@
                     </div>
 
                 </div>
-
-
             </div>
 
-            <div class="row">
-                <div class="col s12 visit-guide">
-                    <br />
+            <div class="visit-guide">
+                <br />
 
-                    <ul class="tabs">
-                        <li class="tab col s3" ng-class="{active:$ctrl.state.tab=='time-visit', disabled:!$ctrl.state.canTab('time-visit')}">
-                            <a href="" ng-click="$ctrl.state.setTab('time-visit')">
-                                <num>1</num><act-subj><act>Выберите</act><subj>дату и время</subj></act-subj>
-                            </a>
-                        </li>
-                        <li class="tab col s3" ng-class="{active:$ctrl.state.tab=='ident-visit', disabled:!$ctrl.state.canTab('ident-visit')}">
-                            <a href="" ng-click="$ctrl.state.setTab('ident-visit')">
-                                <num>2</num><act-subj><act>Пройдите</act><subj>идентификацию</subj></act-subj>
-                            </a>
-                        </li>
-                        <li class="tab col s3" ng-class="{active:$ctrl.state.tab=='result-visit', disabled:!$ctrl.state.canTab('result-visit')}">
-                            <a href="" ng-click="$ctrl.state.setTab('result-visit')">
-                                <num>3</num><act-subj><act>Результат</act><subj>записи</subj></act-subj>
-                            </a>
-                        </li>
-                    </ul>
-                    <div ng-switch="$ctrl.state.tab" class="row">
-                        <div class="col s12" ng-switch-when="time-visit">
-                            <h3 class="header">Выберите дату и время</h3>
-                            <time-visit></time-visit>
-                        </div>
+                <ul class="tabs">
+                    <li class="tab col s3" ng-class="{active:$ctrl.state.tab=='time-visit', disabled:!$ctrl.state.canTab('time-visit')}">
+                        <a href="" ng-click="$ctrl.state.setTab('time-visit')">
+                            <num>1</num><act-subj><act>Выберите</act><subj>дату и время</subj></act-subj>
+                        </a>
+                    </li>
+                    <li class="tab col s3" ng-class="{active:$ctrl.state.tab=='ident-visit', disabled:!$ctrl.state.canTab('ident-visit')}">
+                        <a href="" ng-click="$ctrl.state.setTab('ident-visit')">
+                            <num>2</num><act-subj><act>Пройдите</act><subj>идентификацию</subj></act-subj>
+                        </a>
+                    </li>
+                    <li class="tab col s3" ng-class="{active:$ctrl.state.tab=='result-visit', disabled:!$ctrl.state.canTab('result-visit')}">
+                        <a href="" ng-click="$ctrl.state.setTab('result-visit')">
+                            <num>3</num><act-subj><act>Результат</act><subj>записи</subj></act-subj>
+                        </a>
+                    </li>
+                </ul>
+                <div ng-switch="$ctrl.state.tab">
+                    <div ng-switch-when="time-visit">
+                        <h3 class="header">Выберите дату и время</h3>
+                        <time-visit></time-visit>
+                    </div>
 
-                        <div class="col s12" ng-switch-when="ident-visit">
-                            <h3 class="header">Пройдите идентификацию</h3>
-                            <ident-visit is-local-storage="true"></ident-visit>
-                        </div>
+                    <div ng-switch-when="ident-visit">
+                        <h3 class="header">Пройдите идентификацию</h3>
+                        <ident-visit is-local-storage="true"></ident-visit>
+                    </div>
 
-                        <div class="col s12" ng-switch-when="waiting-visit">
-                            <h3 class="header">Ждите, идет обработка...</h3>
-                            <div class="row">
-                                <div class="col s12 m6 offset-m3">
-                                    <br />
-                                    <div class="progress">
-                                        <div class="indeterminate"></div>
-                                    </div>
+                    <div ng-switch-when="waiting-visit">
+                        <h3 class="header">Ждите, идет обработка...</h3>
+                        <div class="row">
+                            <div class="col s12 m6 offset-m3">
+                                <br />
+                                <div class="progress">
+                                    <div class="indeterminate"></div>
                                 </div>
                             </div>
                         </div>
+                    </div>
 
-                        <div class="col s12" ng-switch-when="error-visit">
-                            <h3 class="header">Ошибка записи!</h3>
-                            <div class="row">
-                                <div class="col s12 m6 offset-m3">
-                                    <br />
-                                    <ait-error-panel error="$ctrl.state.error"></ait-error-panel>
-                                </div>
+                    <div ng-switch-when="error-visit">
+                        <h3 class="header">Ошибка записи!</h3>
+                        <div class="row">
+                            <div class="col s12 m6 offset-m3">
+                                <br />
+                                <ait-error-panel error="$ctrl.state.error"></ait-error-panel>
                             </div>
                         </div>
+                    </div>
 
-                        <div class="col s12" ng-switch-when="result-visit">                            
-                            <result-visit></result-visit>
-                        </div>
+                    <div ng-switch-when="result-visit">
+                        <result-visit></result-visit>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
-
 </div>
