--- a/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/result-visit/result-visit.html
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/result-visit/result-visit.html
@@ -1,19 +1,20 @@
 ﻿<div class="row1">
     <div class="col1 s121 main">
-        <div class="progress">
+        
+        <h3 class="header">Вы записаны на приём <i class="fa fa-check" aria-hidden="true"></i></h3>
+        <div class="progress" ng-if="$ctrl.state.isLoading">
             <div class="indeterminate"></div>
-        </div>
+        </div>        
         <div id="content-report">
 
         </div>
         <div ng-if="$ctrl.state.error">
             <h3 class="header">Упс! Ошибка...</h3>
             <ait-error-panel error="$ctrl.state.error">Ошибка:</ait-error-panel>
-            <p style="text-align:center;">
-                <br />
-                <a class="waves-effect waves-light btn-large orange" ng-href="#"> <i class="fa fa-home" aria-hidden="true"></i> На главную</a>
-            </p>
         </div>
+
+        <p style="text-align:center;" ng-if="!$ctrl.state.isLoading">            
+            <a class="waves-effect waves-light btn-large orange" ng-href="#"> <i class="fa fa-home" aria-hidden="true"></i> Вернуться на главную...</a>
+        </p>
     </div>
 </div>
-
