--- a/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/research/research.html
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/research/research.html
@@ -2,45 +2,77 @@
     <div class="row">
         <div class="col s12">
             <div class="section">
-                <!--<h2 class="header">Исследование</h2>-->
-
-                <span ng-if="$ctrl.isLoading"><ait-loading></ait-loading></span>
-
+                <span ng-if="$ctrl.state.isLoading"><ait-loading></ait-loading></span>
 
                 <!-- ngIf: $ctrl.state.isLoading -->
 
-                <h2 class="name" ng-bind="$ctrl.data.Service.Value"></h2>
+                <h2 class="name" ng-bind="$ctrl.state.research.Service.Value"></h2>
 
-                <div class="hidden-sm hidden-xs ng-binding" ng-if="$ctrl.data">
-                    <p class="hidden-sm hidden-xs" ng-bind="$ctrl.data.About">
-
+                <div class="hidden-sm hidden-xs ng-binding" ng-if="$ctrl.state.research">
+                    <p class="hidden-sm hidden-xs" ng-bind="$ctrl.state.research.About">
                     </p>
                 </div>
-                <lpu-address data="$ctrl.data"></lpu-address>
-                
-                <div class="card row" >
+                <!--<lpu-address data="$ctrl.data"></lpu-address>-->
+                <div class="col m12 visit-guide">
 
-                    <div class="col m12 visit-guide" ng-switch="$ctrl.mode">
+                    <br />
 
-                        <ul class="tabs">
-                            <li class="tab col s4" ng-class="{active:$ctrl.mode=='time-visit'}"><a href="" ng-click="$ctrl.mode='time-visit'">Дата и время</a></li>
-                            <li class="tab col s4" ng-class="{active:$ctrl.mode=='ident-visit'}"><a href="" ng-click="$ctrl.mode='ident-visit'">Идентификация</a></li>
-                            <li class="tab col s4"><a href="" ng-click="$ctrl.mode=''">Результат</a></li>
-                        </ul>
+                    <ul class="tabs">
+                        <li class="tab col s3" ng-class="{active:$ctrl.state.tab=='time-visit', disabled:!$ctrl.state.canTab('time-visit')}">
+                            <a href="" ng-click="$ctrl.state.setTab('time-visit')">
+                                <num>1</num><act-subj><act>Выберите</act><subj>дату и время</subj></act-subj>
+                            </a>
+                        </li>
+                        <li class="tab col s3" ng-class="{active:$ctrl.state.tab=='ident-visit', disabled:!$ctrl.state.canTab('ident-visit')}">
+                            <a href="" ng-click="$ctrl.state.setTab('ident-visit')">
+                                <num>2</num><act-subj><act>Пройдите</act><subj>идентификацию</subj></act-subj>
+                            </a>
+                        </li>
+                        <li class="tab col s3" ng-class="{active:$ctrl.state.tab=='result-visit', disabled:!$ctrl.state.canTab('result-visit')}">
+                            <a href="" ng-click="$ctrl.state.setTab('result-visit')">
+                                <num>3</num><act-subj><act>Результат</act><subj>записи</subj></act-subj>
+                            </a>
+                        </li>
+                    </ul>
 
+                    <div ng-switch="$ctrl.state.tab">
                         <div ng-switch-when="time-visit">
-                            <h3 class="header col s12">Выберите дату и время</h3>
-                            <time-visit></time-visit>
+                            <h3 class="header">Выберите дату и время</h3>
+                            <time-visit service="$ctrl.service"></time-visit>
                         </div>
 
                         <div ng-switch-when="ident-visit">
-                            <h3 class="header col s12">Пройдите идентификацию{{$ctrl.regionId}}</h3>
-                            <ident-visit region-id="$ctrl.regionId"></ident-visit>
+                            <h3 class="header">Пройдите идентификацию</h3>
+                            <ident-visit is-local-storage="true"></ident-visit>
+                        </div>
+
+                        <div ng-switch-when="waiting-visit">
+                            <h3 class="header">Ждите, идет обработка...</h3>
+                            <div class="row">
+                                <div class="col s12 m6 offset-m3">
+                                    <br />
+                                    <div class="progress">
+                                        <div class="indeterminate"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div ng-switch-when="error-visit">
+                            <h3 class="header">Ошибка записи!</h3>
+                            <div class="row">
+                                <div class="col s12 m6 offset-m3">
+                                    <br />
+                                    <ait-error-panel error="$ctrl.state.error"></ait-error-panel>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div ng-switch-when="result-visit">
+                            <result-visit></result-visit>
                         </div>
                     </div>
                 </div>
-
-
             </div>
         </div>
     </div>
