--- a/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/time-visit/time-visit.html
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/time-visit/time-visit.html
@@ -15,7 +15,7 @@
             </div>
             <div class="times-items">
                 <div class="times-item" ng-if="$ctrl.state.times" ng-repeat="t in $ctrl.state.times">
-                    <a href="#/doctor/{{::$ctrl.state.doctorId}}/{{::$ctrl.state.specialityId}}/slot/{{::t.Id}}"
+                    <a href="#{{::$ctrl.state.path}}/slot/{{::t.Id}}"
                        ng-class="{orange:$ctrl.state.slotId==t.Id}"
                        class="waves-effect waves-light btn">
                         {{::t.Value}}
