--- a/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/home/home.html
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/home/home.html
@@ -81,8 +81,8 @@
                 <img style="width:100%;max-width: 450px;" class="img-rect" src="Assets/imgs/phone-3.jpg">
             </div>
             <div class="col m6">
-                <div><h2>Остались вопросы?</h2></div>
-                <div><h3>Звоните по телефону</h3></div>
+                <h3>Остались вопросы?</h3>
+                <h3>Звоните по телефону</h3>
                 <div class="р-phone">+7 (499) <nowrap>333-33-33<nowrap></nowrap></nowrap></div>
             </div>
         </div>
