--- a/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/research/research.html
+++ b/App/Ait.Pay.Web/Ait.Pay.Web/Assets/app/research/research.html
@@ -1,7 +1,7 @@
 ﻿<div class="container">
     <div class="row">
         <div class="col s12">
-            <div class="section">
+            <div>
                 <span ng-if="$ctrl.state.isLoading"><ait-loading></ait-loading></span>
 
                 <!-- ngIf: $ctrl.state.isLoading -->
@@ -13,7 +13,7 @@
                     </p>
                 </div>
                 <!--<lpu-address data="$ctrl.data"></lpu-address>-->
-                <div class="col m12 visit-guide">
+                <div class="visit-guide">
 
                     <br />
 
